Added graph png in index html:

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <input type="text" id="source">
         <input type="text" id="target">
 
+        <hr>
+
         <button onclick="getShortestPath()">Find Shortest path</button>
 
 
@@ -21,12 +23,14 @@
         </div>
 
 
-        <hr> getShortestPath:
+        <hr>
         <div id="shortespath">
 
 
 
         </div>
+
+        <img src="graph.png" alt="">
 
     </body>
     <script src="app.js"></script>
